--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -118,10 +118,10 @@
                 <span class="c-icon" ng-show='contact.onGoogle'> G+ </span>
                 <span class="c-icon" ng-show='contact.onFB'> FB </span>
                 <span ng-show="contact.canUProxy">
-                  <span class="c-icon" ng-show='contact.hasNotification'> ! </span>
                   <img class="c-icon" ng-show='contact.canUProxy' src='icons/uproxy-19.png'>
                 </span>
               </span>
+              <span class="c-notification" ng-show='contact.hasNotification'> ! </span>
             </li>
           </ul>
           </section>
