--- a/chrome/app/scraps/launch.html
+++ b/chrome/app/scraps/launch.html
@@ -16,6 +16,10 @@
       Used for testing/debugging. TODO: add a version of the UI here too; tell the user to install the extension if needed.
     </div>
 
+<script type="text/javascript" src="../js/socket_chrome.js"></script>
+<script type="text/javascript" src="../common/backend/test/simple-proxy-test-loader.js"></script>
+
+
 <!--
   <script type="text/javascript" src="sctp-peerconnection-test.js"></script>
 -->
@@ -38,10 +42,9 @@
     }
 
 var sctp_test = freedom['sctp-peerconnection_test']();
-
-
 -->
 
+<!--
   <script type="text/javascript"
     src="../common/backend/nouns-and-adjectives.js"></script>
   <script type="text/javascript" src="../common/backend/util.js"></script>
@@ -49,7 +52,7 @@ var sctp_test = freedom['sctp-peerconnection_test']();
   <script type="text/javascript" src="../common/backend/uproxy.js"></script>
   <script type="text/javascript"
     src="../common/backend/test/uproxy_local_test_proxying.js"></script>
-
+-->
   <!--
     <script type="text/javascript" src="tcp-server2.js"></script>
     <script type="text/javascript" src="socks.js"></script>
