Added an echo server, made launch.html load it up.

--- a/chrome/app/scraps/launch.html
+++ b/chrome/app/scraps/launch.html
@@ -17,6 +17,7 @@
     </div>
 
 <script type="text/javascript" src="../js/socket_chrome.js"></script>
+<script type="text/javascript" src="../common/backend/client/tcp-server.js"></script>
 <script type="text/javascript" src="../common/backend/test/simple-proxy-test-loader.js"></script>
 
 
