fake proxy and client interactions

--- a/common/ui/options.html
+++ b/common/ui/options.html
@@ -112,6 +112,10 @@
             </div>
 
           </div>
+
+          <div class="status">
+            {{ instance.status }}
+          </div>
         </li>
       </ul>
     </div>
