Cleaned up messages.

--- a/chrome/app/scraps/launch.html
+++ b/chrome/app/scraps/launch.html
@@ -18,8 +18,8 @@
 
 <script type="text/javascript" src="../js/socket_chrome.js"></script>
 <script type="text/javascript" src="../common/backend/test/simple-proxy-test-loader.js"></script>
-<!-- <script type="text/javascript" src="../common/backend/client/tcp-server.js"></script> -->
-<script type="text/javascript" src="../common/backend/test/tcp-echo-server.js"></script>
+<!--<script type="text/javascript" src="../common/backend/client/tcp-server.js"></script>
+<script type="text/javascript" src="../common/backend/test/tcp-echo-server.js"></script> -->
 
 <!-- <script type="text/javascript" src="../common/backend/server/netclient.js"></script> -->
 <!-- <script type="text/javascript" src="../common/backend/server/server.js"></script> -->
