--- a/common/ui/options.html
+++ b/common/ui/options.html
@@ -18,25 +18,21 @@
   </head>
   <body ng-cloak ng-controller="OptionsCtrl" id="options">
     <h3>{{'options'|i18n}}</h3>
+
+    <div class="app-missing-warning" ng-hide="uProxyAppConnectionStatus.connected">
+      You need to install the UProxy app as well as the UProxy extension.
+    </div>
+
     <div id="options-left">
       <label>
         Networks:
       </label>
-      <button class="btn" ng-show="!ui.isOnline('loopback')"
-            ng-click="login('loopback')">Loop</button>
-      <button class="btn" ng-show="ui.isOnline('loopback')"
-            ng-click="logout('loopback')">Loop</button>
-
-      <button class="btn" ng-show="!ui.isOnline('google')"
-            ng-click="login('google')">Login G+</button>
-      <button class="btn" ng-show="ui.isOnline('google')"
-            ng-click="logout('google')">Logout G+</button>
-
-      <button class="btn" ng-show="!ui.isOnline('facebook')"
-            ng-click="login('facebook')">Login FB</button>
-      <button class="btn" ng-show="ui.isOnline('facebook')"
-            ng-click="logout('facebook')">Logout FB</button>
-
+        <span ng-repeat="network in ui.networks">
+          <button class="btn" ng-show="!isOnline(network)"
+            ng-click="login(network)">Login to {{ prettyNetworkName(network) }}</button>
+          <button class="btn" ng-show="isOnline(network)"
+            ng-click="logout(network)">Logout from {{ prettyNetworkName(network) }}</button>
+        </span>
     <h4>Instances</h4>
     <div id="contacts-frame">
       <ul class="contacts">
